--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 argh = "0.1.4"
-simple-error = "0.2.3"
 serde = { version = "1", features = ["derive"] }
+thiserror = "1.0.24"
 csv = "1.1"
 rust_decimal = {version = "1.10.3", features = ["serde-str"] }
